# inscribing

./: .env.example  .gitignore  AGENTS.md  README.md  dev.docker-compose.yml
.agents/: architecture.md  frontend-architecture.md  overview.md  patterns.md  plano-implementacao.md  stack.md
apps/api/: pyproject.toml
apps/api/app/: dependencies.py  logging_config.py  main.py  seed.py
apps/api/app/db/: database.py
apps/api/app/models/: block.py  collection.py  faq.py  user.py
apps/api/app/repositories/: block_repository.py  collection_repository.py  faq_repository.py  user_repository.py
apps/api/app/routes/: auth_routes.py  block_routes.py  chat_routes.py  collection_routes.py
apps/api/app/schemas/: auth_schema.py  block_schema.py  chat_schema.py  collection_schema.py
apps/api/app/services/: auth_service.py  block_service.py  collection_service.py  nlp_service.py  user_service.py
apps/api/tests/: test_chatbot_nlp.py
apps/web/: .gitignore  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/contexts/: AuthContext.tsx  QueryProvider.tsx
apps/web/src/hooks/: useAuth.ts  useBlocks.ts  useChat.ts  useCollections.ts  useFaq.ts
docs/: frontend-architecture.md  index.md
docs/api/: endpoints.md
docs/autenticacao-e-conta/: cadastro.md  login.md  sessao.md
docs/conhecimento-e-suporte/: chatbot.md  faq-estatico.md
docs/edicao-de-textos-e-blocos/: listas-de-tarefas.md  sistema-de-blocos.md
docs/gestao-de-colecoes/: criacao.md  gerenciamento.md
docs/interface-e-navegacao/: barra-lateral.md  navegacao-estrutural.md
(+27 files in other folders)
