[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "taskipy>=1.14.1",
    "uvicorn>=0.48.0",
]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8080"
test = "pytest"
