[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "sqlmodel>=0.0.38",
    "taskipy>=1.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8080"
test = "pytest"
seed = "python -m app.seed"
test-chatbot = "pytest tests/test_chatbot_nlp.py -v"
